# advanced-rag

./: 01_simple_rag.ipynb  02_embedding_model.ipynb  pyproject.toml  requirements.txt
exercise/: 01_simple_rag_exercise.ipynb
